# SWE-Flow

./: CONTRIBUTING.md  README.md  pyproject.toml  run_tests.py
.github/workflows/: tests.yml  unit-test.yaml
docs/: pipeline.md
scripts/: create_codebase.sh  create_docstrings.sh  create_specifications.sh  merge.sh  schedule.sh  trace_tests.sh
sweflow/extensions/python/: create_codebase.py  create_codebase_dev.py  create_docstring.py  create_specification.py  rdg.py  schedule.py
sweflow/extensions/python/data/docstring/: demonstations.json  system-prompt.md
sweflow/extensions/python/data/specification/: demonstations.json  system-prompt.md
sweflow/extensions/python/helper/: __init__.py  code_utils.py  codebase.py  common.py
sweflow/utils/: make_bench.py  merge.py  progress.py  token_utils.py
tests/extensions/python/helper/: test_code_utils.py
tests/utils/: test_progress.py  test_token_utils.py
